--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -44,6 +44,20 @@ publisher = {Tähtitieteellinen yhdistys Ursa},
 year = {1987},
 }
 
+@MISC{ad,
+title = "{Astrodynamiikka}",
+author = {Mikkola, S.},
+year = {2016},
+note = {Lecture handout},
+}
+
+@MISC{diplomarbeit,
+title = "{Interaction of Stars with Black Holes in the Centers of Galaxies - Combining a Tree-Code with Chain Regularization}",
+author = {Karl, S.},
+year = {2007},
+note = {Degree dissertation},
+}
+
 @ARTICLE{eisenhauer:2018,
    author = {{Gravity Collaboration} and {Abuter}, R. and {Amorim}, A. and 
 	{Anugu}, N. and {Baub{\"o}ck}, M. and {Benisty}, M. and {Berger}, J.~P. and 
