--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -312,9 +312,11 @@ A tight $M_{BH} - \sigma$ correlation is important on a practical level since it
 
 \section{Newtonian dynamics}
 
-Solving the Newtonian two-body problem, i.e. determining the motions of two particles interacting only with each other through gravity, is extremely useful. It allows solving the behaviour of two essentially isolated objects, such as a binary star system. It for example also enables us to calculate the masses of two objects that are observed to be interacting with each other if the orbits are known.
+\subsection{Two-body problem}
 
-Let us assume we have a mass $m_1$ situated at position vector $\mathbf{r}_1$, and a mass $m_2$ at position vector $\mathbf{r}_2$. If the first mass exerts a force $\mathbf{f}_{21}$ on the second, by Newton's third law the second object exerts an equal and opposite force, $\mathbf{f}_{12} = -\mathbf{f}_{21}$, on the first one. The masses an their positions are illustrated in figure \ref{fig:2BodyProb}. If these two objects are the only objects in the system, their equations of motion are
+Solving the Newtonian two-body problem, i.e. determining the motions of two particles interacting only with each other through gravity, is extremely useful. It allows solving the behaviour of two essentially isolated objects, such as a binary star system. It for example also enables us to calculate the masses of two objects that are observed to be interacting with each other if their orbits are known.
+
+Let us assume we have a mass $m_1$ situated at position vector $\mathbf{r}_1$, and a mass $m_2$ at position vector $\mathbf{r}_2$. If the first mass exerts a force $\mathbf{f}_{21}$ on the second mass, by Newton's third law the second object exerts an equal and opposite force, $\mathbf{f}_{12} = -\mathbf{f}_{21}$, on the first object. The masses and their positions are illustrated in figure \ref{fig:2BodyProb}. If these two objects are the only objects in the system, their equations of motion are
 \begin{align}
 m_1 \mathbf{\ddot{r}}_1 &= -\mathbf{f} \label{equ:eom1} \\
 m_2 \mathbf{\ddot{r}}_2 &= \mathbf{f} \label{equ:eom2} \ ,
@@ -332,7 +334,7 @@ We can first get an equation describing the motion of the center of mass of the 
 \begin{equation}
 \mathbf{R} = \frac{m_1 \mathbf{r}_1 + m_2 \mathbf{r}_2}{m_1 + m_2}
 \end{equation}
-and by doing the addition we get
+and by performing the addition we get
 \begin{equation}
 m_1 \mathbf{\ddot{r}}_1 + m_2 \mathbf{\ddot{r}}_2 = (m_1 + m_2) \mathbf{\ddot{R}} = \mathbf{f} - \mathbf{f} = 0 \ .
 \end{equation}
@@ -340,7 +342,7 @@ This gives us that
 \begin{equation}
 \mathbf{\ddot{R}} = 0 \ ,
 \end{equation}
-which shows that the velocity of the center of mass is constant. So the position of the center of mass can be determined at all times from initial positions and velocities. We can denote the relative displacement vector of the two masses with $\mbox{$\mathbf{r} = \mathbf{r_2} - \mathbf{r_1}$}$. With it and the center of mass vector, we can write
+which shows that the velocity of the center of mass is constant. So the position of the center of mass can be determined at all times from the initial positions and velocities. We can denote the relative displacement vector of the two masses with $\mbox{$\mathbf{r} = \mathbf{r_2} - \mathbf{r_1}$}$. Together with this and the center of mass vector, we can write
 \begin{align}
 \mathbf{r_1} &= \mathbf{R} - \frac{m_2}{m_1 + m_2}\mathbf{r} \\
 \mathbf{r_2} &= \mathbf{R} + \frac{m_1}{m_1 + m_2}\mathbf{r}
@@ -353,9 +355,9 @@ where
 \begin{equation}
 \mu = \frac{m_1 m_2}{m_1 + m_2}
 \end{equation}
-is called the reduced mass. Thus we have effectively converted the two-body problem of masses $m_1$ and $m_2$ into a one-body problem of the reduced mass $\mu$. The situation is more simple since we do not have to inspect the movement of two separate particles, only the movement of one particle with respect to the other.
+is called the reduced mass. Thus we have effectively converted the two-body problem of masses $m_1$ and $m_2$ into a one-body problem of the reduced mass $\mu$. The situation is now simpler since we do not have to inspect the movement of two separate particles, but only the movement of one particle with respect to the other particle.
 
-In the case of celestial objects, the force that affects these masses is gravity. The gravitational force that the first object exerts on the second object is
+In the case of celestial objects, the force affecting the masses is gravity. The Newtonian gravitational force that the first object exerts on the second object is given by
 \begin{equation}
 \mathbf{f} = -\frac{G m_1 m_2}{r^3} \mathbf{r}
 \end{equation}
@@ -369,7 +371,9 @@ which gives us the equation of motion
 \end{equation}
 where $M = m_1 + m_2$ is the total mass of the system.
 
-The position vector can be expressed as
+\subsection{Equation of the orbit}
+
+The derivation for the Keplerian equation of orbit is done following \cite{bt-galdyn}. The position vector can be expressed as
 \begin{equation}
 \mathbf{r} = r \hat{\mathbf{e}}_r \ ,
 \end{equation}
@@ -385,16 +389,16 @@ Since the cross product of a vector with itself is zero, we can see that
 \begin{equation}
 \frac{\mathrm{d}}{\mathrm{d} t} \left( \mathbf{r} \times \frac{\mathrm{d} \mathbf{r}}{\mathrm{d} t} \right) = \frac{\mathrm{d} \mathbf{r}}{\mathrm{d} t} \times \frac{\mathrm{d} \mathbf{r}}{\mathrm{d} t} + \mathbf{r} \times \frac{\mathrm{d}^2 \mathbf{r}}{\mathrm{d} t^2} = 0 + r \hat{\mathbf{e}}_r \times g(r) \hat{\mathbf{e}}_r = 0 \ ,
 \end{equation}
-so $\mathbf{r} \times \mathbf{\dot{r}}$ is some constant vector, which we can denote with for example $\mathbf{L}$. This is simply the angular momentum per unit mass. It is a constant vector, and therefore the movement of the orbiting objects must happen in a plane. Limiting the movement to two dimensions simplifies the situation, and we can use plane polar coordinates $(r, \theta)$ where the center of attraction is at $r = 0$ and $\theta$ is the azimuthal angle in the plane. We can now find the equations of motions for the system in these coordinates by forming the Lagrangian per unit mass, which is
+thus $\mathbf{r} \times \mathbf{\dot{r}}$ is some constant vector, which we can denote with for example $\mathbf{L}$. This is simply the angular momentum per unit mass. It is a constant vector, and therefore the movement of the orbiting objects must take place in a plane. Limiting the movement to two dimensions simplifies the situation, and we can use plane polar coordinates $(r, \theta)$ where the center of attraction is at $r = 0$ and $\theta$ is the azimuthal angle in the plane. We can now find the equations of motions for the system in these coordinates by forming the Lagrangian per unit mass, which is
 \begin{equation}
 \mathcal{L} = K - V = \frac{1}{2} \mathbf{v}^2 - \Phi (r) = \frac{1}{2} \left[ \dot{r}^2 + (r \dot{\theta})^2 \right] - \Phi (r) \ ,
 \end{equation}
-where $\Phi$ is the gravitational potential and $g(r) = -\mathrm{d} \Phi / \mathrm{d} r$. Writing out the Lagrange's equations gives us the equations of motion, which are
+where $\Phi$ is the gravitational potential and $g(r) = -\mathrm{d} \Phi / \mathrm{d} r$. Writing out the Lagrange equations gives us the equations of motion, which are
 \begin{align}
 \frac{\mathrm{d} }{\mathrm{d} t} \left( \frac{\partial \mathcal{L}}{\partial \dot{r}} \right) - \frac{\partial \mathcal{L}}{\partial r} &= \ddot{r} - r \dot{\theta}^2 + \frac{\mathrm{d} \Phi}{\mathrm{d} r} = 0 \label{equ:leom1} \\
 \frac{\mathrm{d} }{\mathrm{d} t} \left( \frac{\partial \mathcal{L}}{\partial \dot{\theta}} \right) - \frac{\partial \mathcal{L}}{\partial \theta} &= \frac{\mathrm{d}}{\mathrm{d} t} (r^2 \dot{\theta}) = 0 \label{equ:leom2} \ .
 \end{align}
-\ref{equ:leom2} implies that $r^2 \dot{\theta}$ is a constant, which we can denote with $L$. And this is actually the same $L$, angular momentum per unit mass, as before. So this equation is a restatement of the conservation of angular momentum. We can use it to replace time with angle as the independent variable in equation \ref{equ:leom1}. \ref{equ:leom2} implies that
+Equation \ref{equ:leom2} implies that $r^2 \dot{\theta}$ is a constant, which we can denote with $L$. And this is actually the same $L$, angular momentum per unit mass, as before. So this equation is a restatement of the conservation of angular momentum. We can use it to replace time with angle as the independent variable in equation \ref{equ:leom1}. Equation \ref{equ:leom2} implies that
 \begin{equation}
 \frac{\mathrm{d}}{\mathrm{d} t} = \frac{L}{r^2} \frac{\mathrm{d}}{\mathrm{d} \theta} \ ,
 \end{equation}
@@ -422,7 +426,7 @@ this simplifies into
 \begin{equation}
 \frac{\mathrm{d}^2 u}{\mathrm{d} \theta^2} + u = -\frac{1}{L^2} \frac{\mathrm{d}}{\mathrm{d} r} \Phi (1/u) \label{equ:leom3} \ .
 \end{equation}
-Because our gravitational potential is of the form $\Phi = -GMu$, \ref{equ:leom3} simply becomes
+Because our gravitational potential is of the form $\Phi = -GMu$, equation \ref{equ:leom3} simply becomes
 \begin{equation}
 \frac{\mathrm{d}^2 u}{\mathrm{d} \theta^2} + u = \frac{GM}{L^2} \ .
 \end{equation}
@@ -430,11 +434,11 @@ We can immediately see that this is the equation for a simple harmonic oscillato
 \begin{equation}
 u(\theta) = C \mathrm{cos}(\theta - \theta_0) + \frac{GM}{L^2} \label{equ:eomsolution} \ ,
 \end{equation}
-where $C > 0$ and $\theta_0$ are arbitrary constants \citep{bt-galdyn}. We set $\theta_0 = 0$. By defining the orbit's eccentricity, i.e. how much the shape of the orbit differs from a perfect circle, by 
+where $C > 0$ and $\theta_0$ are arbitrary constants. We set $\theta_0 = 0$. By defining the orbit's eccentricity, i.e. how much the shape of the orbit differs from a perfect circle, by 
 \begin{equation}
 e \equiv \frac{CL^2}{GM}
 \end{equation}
-and its semimajor axis, i.e. half of the longest diameter of an ellipse, by
+and its semimajor axis, i.e. half of the longest axis of an ellipse, by
 \begin{equation}
 a \equiv \frac{L^2}{GM(1-e^2)} \ ,
 \end{equation}
@@ -442,16 +446,16 @@ equation \ref{equ:eomsolution} can be rewritten as
 \begin{equation}
 r(\theta) = \frac{a (1-e^2)}{1 + e \ \mathrm{cos} \, \theta} \ .
 \end{equation}
-This is the equation of the orbit for Keplerian orbits, and it is also the equation for a conic section, since all Keplerian orbits are conic sections. $\theta$ is called true anomaly, and it is defined as the angle from the periapsis, as seen from the main focus of the ellipse. Figure \ref{fig:ellipse} illustrates these different parameters.
+This is the equation of the orbit for Keplerian orbits, and it is also the equation for a conic section, since all Keplerian orbits are conic sections. The parameter $\theta$ is called the true anomaly, and it is defined as the angle from the periapsis, as seen from the main focus of the ellipse. Figure \ref{fig:ellipse} illustrates these different parameters.
 
 \begin{figure}[h!tb]
 \centering
 \includegraphics[width=\textwidth]{../images/ellipse.pdf}
-\caption{The different parameters of an elliptic orbit. $C$ is the center of the ellipse, $F$ is the main focus of the ellipse, $a$ is the semimajor axis, $f$ is the distance between the center and focus of the ellipse, $r$ points to the current place of the orbiting body, and $\theta$ is the true anomaly of the object. Eccentricity $e$ can be expressed as the ratio between $f$ and $a$.}
+\caption{The different parameters of an elliptic orbit. $C$ is the center of the ellipse, $F$ is the main focus of the ellipse, $a$ is the semimajor axis, $f$ is the distance between the center and the focus of the ellipse, $r$ points to the current position of the orbiting body, and $\theta$ is the true anomaly of the object. Eccentricity $e$ can be expressed as the ratio between $f$ and $a$.}
 \label{fig:ellipse}
 \end{figure}
 
-The solution to the two-body problem works quite accurately for example in our solar system, even though there are more than just two objects. This is because the mass of the Sun dominates all of the interactions and the planets are far away from each other, so each planet can be examined on its own. In more extreme environments, however, it faces some limitations. The singularity in the equation of motion as $r$ approaches 0 is troublesome when running simulations with close encounters, so modifying the singularity is very useful. This is called regularization. The equation of motion also works only for classical Newtonian systems, but fails to give correct results when relativistic effects become prominent. Thus the equation must be altered, for example with post-Newtonian terms, to make it applicable in a relativistic setting. The next two chapters tackle these two problems respectively.
+The solution to the two-body problem works quite accurately for example in our solar system, even though there are more than just two objects. This is because the mass of the Sun dominates all of the interactions and the planets are far away from each other, so each planet can to the first order be examined on its own. However in more extreme environments, the approximation faces some limitations. The singularity in the equation of motion as $r$ approaches 0 is troublesome when running simulations with close encounters, so it is very useful to rewrite the equations so that the singularity doesn't appear. This is called regularization. The equation of motion also works only for classical Newtonian systems, but fails to give correct results when relativistic effects become prominent. Thus the equation must be altered, for example with post-Newtonian terms, to make it applicable in a relativistic setting. The next two chapters tackle these two problems, respectively.
 
 %TODO
 %mainitse lopussa että ei toimi täsmälleen tälleen koska suhteellisuusteoria, pohjusta PN hommaa
@@ -459,121 +463,154 @@ The solution to the two-body problem works quite accurately for example in our s
 
 \section{Regularization}
 
-Because of the $1/r$ term in the equation of motion \ref{equ:eomgravity}, the two-body problem becomes singular when the distance between two objects approaches zero. It is because of these singularities that simulations of the two-body problem become very arduous when collisions or close approaches occur. Integrators may attempt to handle the singularity by taking smaller and smaller timesteps as the separation between the particles decreases, which slows down the whole simulation drastically. The problem can be avoided by transforming to a coordinate system which does not exhibit any singularities, and this is known as regularization \citep{bt-galdyn}. Usually this comes with the cost of having a higher number of variables to keep track of. But regularization shows great advantages in the time-step sizes needed for accurate integration, and the amount of time-steps needed for integrating close encounters is much smaller \citep{diplomarbeit}. 
+Because of the $1/r$ term in the equation of motion (equation \ref{equ:eomgravity}), the two-body problem becomes singular when the distance between two objects approaches zero. It is because of these singularities that simulations of the two-body problem become very arduous when collisions or close approaches occur. Integrators may attempt to handle the singularity by taking smaller and smaller time-steps as the separation between the particles decreases, which slows down the whole simulation drastically. The problem can be avoided by transforming to a coordinate system which does not exhibit any singularities, and this is known as regularization \citep{bt-galdyn}. 
+%Usually this comes with the cost of having a higher number of variables to keep track of. But regularization shows great advantages in the time-step sizes needed for accurate integration, and the amount of time-steps needed for integrating close encounters is much smaller \citep{diplomarbeit}. 
 
-\subsection{One dimensional regularization}
+\subsection{One-dimensional regularization}
 
-The one dimensional case is simple, but gives a good basis for the methods used in the higher dimensional cases as well. The Hamiltonian for the relative motion in a one dimensional two-body problem is
+The one-dimensional case is simple, but gives a good basis for understanding the methods used in the higher-dimensional cases as well. The Hamiltonian for the relative motion in a one-dimensional two-body problem is
 \begin{equation}
-H(r,p,t) = \frac{p^2}{2 \mu} - \frac{G \mu M}{\left| r \right|} \ .
+H(q,p,t) = K + V = \frac{p^2}{2 \mu} - \frac{G \mu M}{\left| q \right|} \ .
 \end{equation}
-We can do the canonical transformation $r = u^2$, so the generating function for the point transformation is 
+We may do a transformation to some new coordinate system $(Q, P)$. We can do a canonical point transformation where the old canonical coordinates are changed to new ones through $q = Q^2$. A generating function $S$ is a function whose partial derivatives give us the Hamiltonian in the coordinate system. We can now get the new canonical impulses through a generating function of the form
 \begin{equation}
-S = pr = pu^2
+S(p,Q) = \sum p q(Q) = pq(Q) = pQ^2
 \end{equation}
 and
 \begin{equation}
-P = \frac{\partial S}{\partial u} = 2pu \ ,
+P = \frac{\partial S}{\partial Q} = 2pQ \ ,
 \end{equation}
 so
 \begin{equation}
-p = \frac{P}{2u} \ .
+p = \frac{P}{2Q} \ .
 \end{equation}
 The new Hamiltonian is then
 \begin{equation}
-H(u,P,t) = \frac{P^2}{8u^2 \mu} - \frac{G \mu M}{u^2} \ .
+H(Q,P,t) = \frac{P^2}{8Q^2 \mu} - \frac{G \mu M}{u^2} \ .
 \end{equation}
 
-Next we want to do a time transformation as well. We may choose a function $t = t(s)$, where $s$ is the new time variable, also called fictitious or regularized time. In a more general sense we may choose a time transformation function $g(r,p)$ so that $\mathrm{d} t = g \, \mathrm{d} s$ \citep{ad}. For the transformation to remain canonical, our new Hamiltonian must be obtained through the Poincaré function. Since the Hamiltonian is not explicitly dependant on time, the function is
+Next we want to do a time transformation as well. We may choose a function $t = t(s)$, where $s$ is the new time variable, also called fictitious or regularized time. In a more general sense we may choose a time transformation function $g(q,p)$ so that $\mathrm{d} t = g \, \mathrm{d} s$ \citep{ad}. For the transformation to remain canonical, our new Hamiltonian must be obtained through the Poincaré time transformation \citep{mikkola:2008}. In the Poincaré transformation one takes time to be a canonical coordinate $(t=q_0)$ and the corresponding momentum of time is the binding energy of the system, $p_0 = -E$. The new Hamiltonian obtained through this transformation is then
 \begin{equation}
-\Gamma(r,p,s) = g(r,p) (H(r,p,t) - E) \ ,
+\Gamma(q,p,s) = g(q,p) (H(q,p,q_0) + p_0) \ .
 \end{equation}
-where $E$ is a constant representing the total energy.
-
-By choosing $g = \left| r \right|$, the transformation gives us
+By choosing $g = r = \left| q \right|$, where r is simply the particle separation, the transformation gives us
 \begin{align}
-\Gamma(u,P,s) &= u^2 \left( \frac{P^2}{8u^2 \mu} - \frac{G \mu M}{u^2} -E \right) \nonumber \\
-&= \frac{P^2}{8 \mu} - G \mu M - E u^2 \ .
+\Gamma(Q,P,s) &= Q^2 \left( \frac{P^2}{8Q^2 \mu} - \frac{G \mu M}{Q^2} -E \right) \nonumber \\
+&= \frac{P^2}{8 \mu} - E Q^2 - G \mu M \ .
 \end{align}
-The canonical equations
+The canonical equations are now
 \begin{align}
-\frac{\mathrm{d} u}{\mathrm{d} s} &= \frac{\partial \Gamma}{\partial P} = \frac{P}{4 \mu} \\
-\frac{\mathrm{d} P}{\mathrm{d} s} &= -\frac{\partial \Gamma}{\partial u} = 2Eu
+\frac{\mathrm{d} Q}{\mathrm{d} s} &= \frac{\partial \Gamma}{\partial P} = \frac{P}{4 \mu} \\
+\frac{\mathrm{d} P}{\mathrm{d} s} &= -\frac{\partial \Gamma}{\partial Q} = 2EQ
 \end{align}
-give us the equation of motion in these new coordinates
+and give us the equation of motion in these new coordinates
 \begin{equation}
-\frac{\mathrm{d}^2 u}{\mathrm{d} s^2} = \frac{E}{2 \mu} u \label{equ:eomRegu} \ .
+\frac{\mathrm{d}^2 Q}{\mathrm{d} s^2} = \frac{E}{2 \mu} Q \label{equ:eomRegu} \ .
 \end{equation}
 The singularity at $r = 0$ has now been removed. In a bound system $E < 0$, so the solution to the equation of motion is a simple harmonic oscillator.
 
 \subsection{Levi-Civita transformation}
 
-Regularization for the two-dimensional case is quite similar to the one-dimensional case, but now our positions and momentums are two dimensional vectors. It has been named the Levi-Civita transformation, after the Italian mathematician who first used this method. The Hamiltonian is
+Regularization for the two-dimensional case is quite similar to the one-dimensional case, but now our positions and momentums are two dimensional vectors. It has been named the Levi-Civita transformation, after the Italian mathematician who first used this method \citep{levi-civita:1920}. The Hamiltonian is now
 \begin{equation}
-H(\mathbf{r},\mathbf{p},t) = \frac{\mathbf{p}^2}{2 \mu} - \frac{G \mu M}{\left| \mathbf{r} \right|} \ .
-\end{equation} 
-The transformation for the new coordinates is given as complex multiplication, where the complex numbers are represented as vectors
-\begin{equation}
-\mathbf{r} = \mathbf{u} \circ \mathbf{u} \ .
+H(\mathbf{r},\mathbf{p},t) = \frac{\mathbf{p}^2}{2 \mu} - \frac{G \mu M}{r} \ .
 \end{equation}
-The transformation matrix can be then written as 
+The transformation to the new coordinates is given via complex numbers. The new coordinates are $Q_1, Q_2$ so that $\mathbf{Q} = Q_1 + iQ_2$ and $r = x + iy = \mathbf{Q}^2 = (Q_1 + iQ_2)^2$. From this we get $x = Q_1^2 - Q_2^2$ and $y = 2Q_1 Q_2$. By again choosing $g = r$ as in the previous section, the Poincaré transform gives us 
 \begin{equation}
-\mathbf{r} = \mathcal{L}(\mathbf{u}) \mathbf{u} \ ,
+\Gamma = r \left( \frac{\mathbf{p}^2}{2 \mu} - \frac{G \mu M}{r} - E \right) = \frac{\mathbf{P}^2}{8 \mu} - E \mathbf{Q}^2 - G \mu M \ ,
 \end{equation}
-where $\mathcal{L}(\mathbf{u})$ is the Levi-Civita matrix
+where $\mathbf{P} = 2 \mathbf{Q} \cdot \mathbf{p}$. Like in the one-dimensional case, this is the Hamiltonian of a simple harmonic oscillator, except in this case our harmonic oscillator is two-dimensional. The singularity has thus once again been removed.
+
+The transformation $r = \mathbf{Q}^2$ can also be expressed in vector notation as
 \begin{equation}
-\mathcal{L}(\mathbf{u}) =
+\mathbf{r} = \mathcal{L}(\mathbf{Q}) \mathbf{Q} \ ,
+\end{equation}
+where $\mathcal{L}(\mathbf{Q})$ is the Levi-Civita matrix
+\begin{equation}
+\mathcal{L}(\mathbf{Q}) =
 \begin{pmatrix}
-u_1 & -u_2 \\
-u_2 & u_1
+Q_1 & -Q_2 \\
+Q_2 & Q_1
 \end{pmatrix} \ .
 \end{equation}
-From this we also get that $\left| \mathbf{r} \right| = \left| \mathbf{u} \right|^2$ \citep{diplomarbeit}. We now use the generating function
-\begin{equation}
-S = \sum^2_{i=1} p_i \cdot r_i = \sum^2_{i=1} P_i \cdot u_i \ ,
-\end{equation}
-which gives us that $\mathbf{P} = 2 \mathbf{u} \cdot \mathbf{p}$. We again use a new time coordinate with $g = \left| \mathbf{r} \right|$. Combining all of these together, the Poincaré transform gives us
-\begin{equation}
-\Gamma = \frac{P^2}{8 \mu} - G \mu M - E u^2 \ .
-\end{equation}
-This is the same resolution as in the one-dimensional case. The solution is the same as well, except in this case our harmonic oscillator two-dimensional. The singularity has thus once again been removed.
+This sort of matrix has properties that are useful when formulating transformations in higher dimensional cases.
 
 \subsection{Kustaanheimo-Stiefel method}
-While the two-body problem is limited to two dimensions in theory, in reality there are usually perturbations which cause the need for a third dimension, so a three-dimensional generalization is desirable. A problem with this arises from the fact that it is not possible to do the generalization directly in three dimensions. The Levi-Civita matrix is a good tool, and it has several useful properties. All of its elements are linear homogeneous functions of $u_i$, and the mapping defined by the matrix is conformal, i.e. the transformation matrix is orthogonal. A matrix with such properties cannot exist in three dimensions, and the next suitable step from a two-dimensional matrix is a four-dimensional matrix \citep{diplomarbeit}. The Kustaanheimo-Stiefel (KS) method involves doing the transformation into three-dimensional space through four dimensions.
+While the two-body problem is limited to two dimensions in theory, in reality there are usually perturbations which cause the need for a third dimension, so a three-dimensional generalization is desirable. A problem with this arises from the fact that it is not possible to do the generalization directly in three dimensions. The Levi-Civita matrix is a good tool, and it has several useful properties. All of its elements are linear homogeneous functions of $Q_i$, and the mapping defined by the matrix is conformal, i.e. the transformation matrix is orthogonal. A matrix with such properties cannot exist in three dimensions, and the next suitable step from a two-dimensional matrix is a four-dimensional matrix \citep{diplomarbeit}. The Kustaanheimo-Stiefel (KS) method involves doing the transformation into three-dimensional space through four dimensions.
 
-The transformation is given by
+The old and new coordinates are defined as
+\begin{align}
+\mathbf{Q} &= (Q_1 \ Q_2 \ Q_3 \ Q_4)^\mathrm{T} \nonumber \\
+\mathbf{r} &= (r_1 \ r_2 \ r_3 \ r_4)^\mathrm{T} \\
+\mathbf{p} &= (p_1 \ p_2 \ p_3 \ p_4)^\mathrm{T}  \nonumber
+\end{align}
+and the KS matrix is defined as 
 \begin{equation}
-\mathbf{r} = \mathcal{L}(\mathbf{u}) \mathbf{u} \ ,
-\end{equation}
-where
-\begin{equation}
-\mathcal{L}(\mathbf{u}) =
+\mathcal{L}(\mathbf{Q}) =
 \begin{pmatrix}
-u_1 & -u_2 & -u_3 & u_4 \\
-u_2 & u_1 & -u_4 & -u_3 \\
-u_3 & u_4 & u_1 & u_2 \\
-u_4 & -u_3 & u_2 & -u_1
-\end{pmatrix}
+Q_1 & -Q_2 & -Q_3 & Q_4 \\
+Q_2 & Q_1 & -Q_4 & -Q_3 \\
+Q_3 & Q_4 & Q_1 & Q_2 \\
+Q_4 & -Q_3 & Q_2 & -Q_1
+\end{pmatrix} \ .
 \end{equation}
-is the KS matrix. We will again use the time transformation $\mathrm{d} t = \left| \mathbf{r} \right| \mathrm{d} s $. Since we only have movement in three dimension, we can choose that $r_4 = 0$ and $\dot{r_4} = 0$. Once again we get that
+The transformation is given by the relations 
 \begin{equation}
-\left| \mathbf{r} \right| = \left| \mathbf{u}^2 \right| \ ,
+\mathbf{r} = \mathcal{L} \mathbf{Q} \label{equ:KStransform}
 \end{equation}
+and
 \begin{equation}
-\mathbf{P} = 2 \mathcal{L}^T \mathbf{p} \ ,
+\mathbf{P} = 2 \mathcal{L}^\mathrm{T} \mathbf{p} \ ,
 \end{equation}
-and the Poincaré function
+and by again using the time transform function $g = r = \mathbf{Q}^2$. Thus we get that
 \begin{equation}
-\Gamma = \frac{P^2}{8 \mu} - G \mu M - E u^2 \ ,
+\Gamma = r \left( \frac{\mathbf{p}^2}{2 \mu} - \frac{G \mu M}{r} - E \right) = \frac{\mathbf{P}^2}{8 \mu} - E \mathbf{Q}^2 - G \mu M \ ,
 \end{equation}
-which looks the same as in the previous sections. The equation of motion looks the same as \ref{equ:eomRegu}, only this time it has the solution of a four-dimensional harmonic oscillator.
+which once again is the Hamiltonian of a harmonic oscillator, this time in four dimensions. And the coordinate singularity has disappeared like in the previous cases.
+Though as there is still an extra dimension, we need to map the three dimensional physical space to the four dimensional space. The simplest way is to set that $r_4 = 0$ and $p_4 = 0$. 
 
-\noindent (TODO: Syvällisemmin KS:ää? Lisää alakohtia? Jonkunlainen loppukaneetti.)
+Calculating $\mathbf{r}$ from equation \ref{equ:KStransform} we get
+\begin{equation}
+\mathbf{r} = 
+\begin{pmatrix}
+r_1 \\
+r_2 \\
+r_3 \\
+r_4
+\end{pmatrix}
+=
+\begin{pmatrix}
+Q_1^2 - Q_2^2 - Q_3^2 + Q_4^2 \\
+2(Q_1 Q_2 - Q_3 Q_4) \\
+2(Q_1 Q_3 + Q_2 Q_4) \\
+0
+\end{pmatrix} \ .
+\end{equation}
+We can still determine one of the extra components of $\mathbf{Q}$, and setting $Q_4 = 0$ gives us the following relations
+\begin{align}
+Q_1 &= \left( \frac{1}{2} ( r + \left| r_1 \right| ) \right)^{1/2} \nonumber \\
+Q_2 &= \frac{1}{2} \frac{r_2}{Q_1} \\
+Q_3 &= \frac{1}{2} \frac{r_3}{Q_1} \nonumber \ 
+\end{align}
+and the mapping
+\begin{equation}
+\mathbf{Q} = 
+\begin{cases}
+\left( Q_1 \ Q_2 \ Q_3 \ Q_4 \right)^\mathrm{T} \ , \ \mathrm{if} \ r_1 \geq 0 \\
+\left( Q_1 \ Q_2 \ Q_4 \ Q_3 \right)^\mathrm{T} \ , \ \mathrm{if} \ r_1 < 0 \ .
+\end{cases}
+\end{equation}
+With these mappings we can accurately convert the coordinates between the different dimensional spaces \citep{diplomarbeit, ad}.
+
+Regularized computational methods are very precise, but they they are typically much more computationally expensive than non-regularized ones, so there would be benefits for an accurate method that does not need this kind of regularization. Fortunately there exists another method which involves only time transformation but no coordinate transformation, named algorithmic regularization (AR) \citep{diplomarbeit}. These kinds of regularization methods do not actually remove the Newtonian collision singularities from the equations of motion, but the equations can be evaluated in a way that they behave regularly regardless. Algorithmic regularization will be discussed more in chapter \ref{chap:ar-chain}.
+
+
+%\noindent (TODO: Syvällisemmin KS:ää? Lisää alakohtia? Jonkunlainen loppukaneetti.)
 
 \section{Post-Newtonian dynamics} \label{sect:pndynam}
 
 While Newtonian dynamics is a perfectly valid approximation in everyday life, it stops giving correct results when more massive or faster moving objects are concerned, and instead we need to use general relativity (GR). %TODO Selitä geeärrää?
-Doing fully general relativistic simulations is very computationally intensive however, so more wieldy methods are required for large scale simulations. This is where post-Newtonian (PN) expansions come in. Post-Newtonian expansions in general relativity are used for finding an approximate solution of the Einstein field equations for the metric tensor. %TODO selitä noi lisäks
+Doing fully general relativistic simulations is very computationally intensive however, so more wieldy methods are required for large-scale simulations. This is where post-Newtonian (PN) expansions come in. Post-Newtonian expansions in general relativity are used for finding an approximate solution of the Einstein field equations for the metric tensor. %TODO selitä noi lisäks
 Einstein field equations are the set of 10 equations in Albert Einstein's general theory of relativity that describe the fundamental interaction of gravitation as a result of spacetime being curved by mass and energy.
 %TODO tää kopipastattiin aiemmas
 In other words, the post-Newtonian theory is an approximate version of general relativity that applies when the gravitational field is relatively weak, and the motion of the matter is slow. The theory successfully describes the gravitational field of our solar system, but it can also be applied to situations involving compact bodies with strong internal gravity.
@@ -636,7 +673,7 @@ There are some systems that cannot be properly described by post-Newtonian appro
 \subsection{Three body scattering}
 \subsection{Gravitational waves}
 
-\chapter{AR-CHAIN}
+\chapter{AR-CHAIN} \label{chap:ar-chain}
 \section{AR-CHAIN overview}
 
 The code uses post-Newtonian corrections to take into account and approximate the relativistic effects near the black hole particles. The corrections are represented by additional terms in the relative accelerations of the two bodies, so that
