--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -58,6 +58,31 @@ year = {2007},
 note = {Degree dissertation},
 }
 
+@article{levi-civita:1920,
+   author = "Levi-Civita, T.",
+  journal = "Acta Mathematica",
+    pages = "99--144",
+publisher = "Institut Mittag-Leffler",
+    title = "Sur la régularisation du problème des trois corps",
+   volume = "42",
+     year = "1920",
+}
+
+@INPROCEEDINGS{mikkola:2008,
+   author = {{Mikkola}, S.},
+    title = "{A Brief History of Regularisation}",
+ keywords = {stellar dynamics, methods: n-body simulations, methods: numerical},
+booktitle = {Dynamical Evolution of Dense Stellar Systems},
+     year = 2008,
+   series = {IAU Symposium},
+   volume = 246,
+    month = may,
+    pages = {218-227},
+      doi = {10.1017/S1743921308015639},
+   adsurl = {http://adsabs.harvard.edu/abs/2008IAUS..246..218M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{eisenhauer:2018,
    author = {{Gravity Collaboration} and {Abuter}, R. and {Amorim}, A. and 
 	{Anugu}, N. and {Baub{\"o}ck}, M. and {Benisty}, M. and {Berger}, J.~P. and 
